// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-eCivAt cCKvrK"
  >
    Xsmall
  </span>
  <span
    className="sc-eCivAt cvwRaw"
    color="piccolo.100"
  >
    Xsmall
  </span>
  <span
    className="sc-eCivAt ItNpJ"
    color="goten.100"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different LetterCases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-eCivAt cCKvrK"
  >
    Uppercase
  </span>
  <span
    className="sc-eCivAt iIzDv"
  >
    Lowercase
  </span>
  <span
    className="sc-eCivAt YhHJE"
  >
    Capitalize
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-eCivAt feJOXu"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-eCivAt cCKvrK"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different SizesList 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-eCivAt feJOXu"
      size="twoxsmall"
    >
      Twoxsmall
    </span>
    <span
      className="sc-eCivAt jPVlyO"
      size="twoxsmall"
    >
      <span
        className="sc-dhateT gcQTiH"
        size="twoxsmall"
      >
        <svg
          className="sc-iWahwt bbqLtz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-eCivAt ghrgdC"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-iYauaQ hynABM"
        size="twoxsmall"
      >
        <svg
          className="sc-gwfuxq evxksZ"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-eCivAt kKAtZC"
      size="twoxsmall"
    >
      <span
        className="sc-dhateT gcQTiH"
        size="twoxsmall"
      >
        <svg
          className="sc-iWahwt bbqLtz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-iYauaQ hynABM"
        size="twoxsmall"
      >
        <svg
          className="sc-gwfuxq evxksZ"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-eCivAt cCKvrK"
    >
      Xsmall
    </span>
    <span
      className="sc-eCivAt eGOZca"
    >
      <span
        className="sc-dhateT fZflq"
      >
        <svg
          className="sc-iWahwt bbqLtz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-eCivAt LuSlC"
    >
      Xsmall
      <span
        className="sc-iYauaQ gpTPIx"
      >
        <svg
          className="sc-gwfuxq evxksZ"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-eCivAt ksiqKy"
    >
      <span
        className="sc-dhateT fZflq"
      >
        <svg
          className="sc-iWahwt bbqLtz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-iYauaQ gpTPIx"
      >
        <svg
          className="sc-gwfuxq evxksZ"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
